# avr-flight

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Ravedude.toml  default.ld  generate_reports.sh  main.c  makefile  run_avr.elf
.cargo/: config.toml
common/: crt.s  default.ld  makefile
src/: delay.rs  lib.rs  main.rs  port.rs
